Bug 1917782 - [devtools] Handle accessibility tree unfocused selected node style in High Contrast Mode. r=accessibility-frontend-reviewers,devtools-reviewers,ochameau,morgan.
Differential Revision: https://phabricator.services.mozilla.com/D221802

UltraBlame original commit: 6da64a6c9011621d5b64853f87992d148039ec59

--- a/devtools/client/accessibility/accessibility.css
+++ b/devtools/client/accessibility/accessibility.css
@@ -521,6 +521,66 @@ grey
 )
 )
 ;
+&
+[
+forced
+-
+colors
+-
+active
+]
+{
+-
+-
+accessibility
+-
+unfocused
+-
+tree
+-
+focused
+-
+node
+-
+background
+:
+GrayText
+;
+-
+-
+accessibility
+-
+unfocused
+-
+tree
+-
+focused
+-
+node
+-
+color
+:
+SelectedItemText
+;
+-
+-
+accessibility
+-
+unfocused
+-
+tree
+-
+focused
+-
+node
+-
+twisty
+-
+fill
+:
+SelectedItemText
+;
+}
 }
 /
 *
@@ -711,7 +771,7 @@ theme
 -
 twisty
 {
-fill
+color
 :
 var
 (
@@ -2682,29 +2742,13 @@ node
 background
 )
 ;
-}
-.
-treeTable
-:
-not
-(
-:
-focus
-:
-focus
--
-within
-)
-.
-treeRow
-.
-selected
+&
 .
 theme
 -
 twisty
 {
-fill
+color
 :
 var
 (
@@ -2726,65 +2770,37 @@ fill
 )
 ;
 }
-.
-treeTable
-:
-not
-(
-:
-focus
-:
-focus
--
-within
-)
-.
-treeRow
-.
-selected
+&
 *
-.
-treeTable
-:
-not
-(
-:
-focus
-:
-focus
--
-within
-)
-.
-treeRow
-.
-selected
+&
 .
 treeLabelCell
+:
 :
 after
 {
 color
 :
+var
+(
+-
+-
+accessibility
+-
+unfocused
+-
+tree
+-
+focused
+-
+node
+-
+color
 inherit
+)
 ;
 }
-.
-treeTable
-:
-not
-(
-:
-focus
-:
-focus
--
-within
-)
-.
-treeRow
-.
-selected
+&
 .
 objectBox
 -
@@ -2796,11 +2812,28 @@ var
 (
 -
 -
+accessibility
+-
+unfocused
+-
+tree
+-
+focused
+-
+node
+-
+color
+var
+(
+-
+-
 string
 -
 color
 )
+)
 ;
+}
 }
 .
 treeTable
@@ -4092,27 +4125,44 @@ node
 background
 )
 ;
-}
-.
-accessible
-.
-tree
 :
-not
+root
+[
+forced
+-
+colors
+-
+active
+]
+&
+{
+color
+:
+var
 (
-:
-focus
-)
-.
-node
-.
+-
+-
+accessibility
+-
+unfocused
+-
+tree
+-
 focused
+-
+node
+-
+color
+)
+;
+}
+&
 .
 theme
 -
 twisty
 {
-fill
+color
 :
 var
 (
@@ -4133,6 +4183,7 @@ twisty
 fill
 )
 ;
+}
 }
 .
 accessible
